feat: add return to main page option

--- a/recipes/frenchfries.html
+++ b/recipes/frenchfries.html
@@ -26,5 +26,8 @@
         <li>Heat oil in a deep-fryer to 375 degrees F (190 degrees C).</li>
         <li>Cook potatoes in hot oil until golden, 5 to 6 minutes. Drain on paper towels and season with salt.</li>
     </ol>
+
+    <a href="../index.html">Return to main page</a>
+
 </body>
 </html>
