--- a/recipes/mashedpotatos.html
+++ b/recipes/mashedpotatos.html
@@ -26,5 +26,7 @@
         <li><strong>Heat the milk:</strong> Heat the milk and butter in a saucepan until the butter is melted.</li>
         <li><strong>Mash the potatoes:</strong> Drain the potatoes, then return them to the pot. Slowly add the warm milk mixture, mashing with a potato masher or blending with a mixer until the potatoes are smooth and creamy. Season to taste.</li>
     </ol>
+
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
