--- a/recipes/roastedpotatoes.html
+++ b/recipes/roastedpotatoes.html
@@ -35,5 +35,8 @@
         <li>Bake in the preheated oven for 15 to 20 minutes. Flip potatoes and continue baking until golden and crispy, 15 to 20 more minutes. Serve with sour cream.</li>
         <li>Serve hot and enjoy!</li>
     </ol>
+
+    <a href="../index.html">Return to main page</a>
+
 </body>
 </html>
