--- a/recipes/scallopedpotatoes.html
+++ b/recipes/scallopedpotatoes.html
@@ -28,5 +28,8 @@
         <li>Heat milk in a saucepan until warm. Pour enough warm milk over the mixture in the baking dish so the top of the liquid is level with the final layer of potatoes.</li>
         <li>Bake in the preheated oven until potatoes are tender, 45 to 60 minutes. Serve hot and enjoy!</li>
     </ol>
+
+    <a href="../index.html">Return to main page</a>
+
 </body>
 </html>
