feat: new title and image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Potatoes recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Potato Universe</h1>
+    <p>Check out all of these potato recipes!</p>
+    <img src="https://cdn3d.iconscout.com/3d/premium/thumb/hugging-potato-6509343-5376835.png" alt="animated potato hugging itself">
     <ul>
         <li><a href="recipes/mashedpotatos.html">Mashed potatoes</a></li>
         <li><a href="recipes/scallopedpotatoes.html">Scalloped potatoes</a></li>
