modify page layout

--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Potatoes recipes</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Potato Universe</h1>
-    <p>Check out all of these potato recipes!</p>
-    <img src="https://cdn3d.iconscout.com/3d/premium/thumb/hugging-potato-6509343-5376835.png" alt="animated potato hugging itself">
-    <ul>
-        <li><a href="recipes/mashedpotatos.html">Mashed potatoes</a></li>
-        <li><a href="recipes/scallopedpotatoes.html">Scalloped potatoes</a></li>
-        <li><a href="recipes/roastedpotatoes.html">Oven roasted parmesan potatoes</a></li>
-        <li><a href="recipes/frenchfries.html">French fried potatoes</a></li>
-    </ul>
+    <div class="container">
+        <h1>Potato Universe</h1>
+        <p>Check out all of these potato recipes!</p>
+        <img src="https://cdn3d.iconscout.com/3d/premium/thumb/hugging-potato-6509343-5376835.png" alt="animated potato hugging itself">
+        <ul>
+            <li><a href="recipes/mashedpotatos.html">Mashed potatoes</a></li>
+            <li><a href="recipes/scallopedpotatoes.html">Scalloped potatoes</a></li>
+            <li><a href="recipes/roastedpotatoes.html">Oven roasted parmesan potatoes</a></li>
+            <li><a href="recipes/frenchfries.html">French fried potatoes</a></li>
+        </ul>
+    </div>
     
+</body>
 </html>
