update page layout

--- a/recipes/frenchfries.html
+++ b/recipes/frenchfries.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>French Fried Potatoes</title>
+    <link rel="stylesheet" href="../css/recipes.css">
+
 </head>
 <body>
-    <h1>French Fried Potatoes</h1>
-    <img src="https://www.allrecipes.com/thmb/HkH7lJ3v0rtLOpGd7un2k2k27eM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4488416-0627cab55d4e44ec80f974fbc67befb7.jpg" alt="picture of french fries">
+    <div class="title">
+        <div class="tt">
+            <h1>French Fried Potatoes</h1>
+            <a href="../index.html">Return to main page</a>
+            <p>Scroll down for the recipe!</p>
+        </div>       
+        <img src="https://www.allrecipes.com/thmb/HkH7lJ3v0rtLOpGd7un2k2k27eM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4488416-0627cab55d4e44ec80f974fbc67befb7.jpg" alt="picture of french fries">
+    </div>
+
     <h2>Description</h2>
-    <p>The best potatoes for French fries are soaked in a sugar solution before frying. The sugar solution has something to do with the carbohydrates and prevents the potatoes from soaking up a lot of grease, so they get crunchy.</p>
+        <p>The best potatoes for French fries are soaked in a sugar solution before frying. The sugar solution has something to do with the carbohydrates and prevents the potatoes from soaking up a lot of grease, so they get crunchy.</p>
 
     <h2>Ingredients</h2>
     <ul>
