--- a/recipes/scallopedpotatoes.html
+++ b/recipes/scallopedpotatoes.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scalloped Potatoes</title>
+    <link rel="stylesheet" href="../css/recipes.css">
+
 </head>
 <body>
-    <h1>Scalloped Potatoes</h1>
-    <img src="https://www.allrecipes.com/thmb/MOImPPEOnBdP80tC5vdwt6AK3Bo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/240290-moms-scalloped-potatoes-DDMFS-4x3-6921e40df71440008124327b519004f8.jpg" alt="picture of scalloped potatoes">
+    <div class="title">
+        <div class="tt">
+            <h1>Scalloped Potatoes</h1>
+            <a href="../index.html">Return to main page</a>
+            <p>Scroll down for the recipe!</p>
+        </div>
+        <img src="https://www.allrecipes.com/thmb/MOImPPEOnBdP80tC5vdwt6AK3Bo=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/240290-moms-scalloped-potatoes-DDMFS-4x3-6921e40df71440008124327b519004f8.jpg" alt="picture of scalloped potatoes">
+    </div>
+
     <h2>Description</h2>
-    <p>These classic scalloped potatoes are tender, creamy, and delicious. This is the way my mother always made her scalloped potatoes. The key is to heat the milk first!</p>
+        <p>These classic scalloped potatoes are tender, creamy, and delicious. This is the way my mother always made her scalloped potatoes. The key is to heat the milk first!</p>
 
     <h2>Ingredients</h2>
     <ul>
