--- a/recipes/roastedpotatoes.html
+++ b/recipes/roastedpotatoes.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oven Roasted Parmesan Potatoes</title>
+    <link rel="stylesheet" href="../css/recipes.css">
+
 </head>
 <body>
-    <h1>Oven Roasted Parmesan Potatoes</h1>
-    <img src="https://www.allrecipes.com/thmb/mnmO6QO7PMUjIPZ0jHho2lXYZb4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/233393-oven-roasted-parmesan-potatoes-DDMFS-4x3-48e56bab2d1d4a05a6ecbe53564a7f6d.jpg" alt="picture of roasted potatoes">
-    <h2>Description</h2>
-    <p>These Parmesan-roasted potatoes are crispy on the outside and soft and creamy on the inside. I have tried a lot of good roasted potato recipes, but I keep coming back to this one.</p>
+    <div class="title">
+        <div class="tt">
+            <h1>Roasted Parmesan Potatoes</h1>
+            <a href="../index.html">Return to main page</a>
+            <p>Scroll down for the recipe!</p>
+        </div>
+        <img src="https://www.allrecipes.com/thmb/mnmO6QO7PMUjIPZ0jHho2lXYZb4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/233393-oven-roasted-parmesan-potatoes-DDMFS-4x3-48e56bab2d1d4a05a6ecbe53564a7f6d.jpg" alt="picture of roasted potatoes">
+         
+    </div>
 
+    <h2>Description</h2>
+        <p>These Parmesan-roasted potatoes are crispy on the outside and soft and creamy on the inside. I have tried a lot of good roasted potato recipes, but I keep coming back to this one.</p>   
+        
     <h2>Ingredients</h2>
     <ul>
         <li>cooking spray</li>
